--- a/public/css/app.css
+++ b/public/css/app.css
@@ -50,6 +50,7 @@ html {
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  background-color: #ddf0e0 !important;
 }
 
 article,
@@ -73,12 +74,86 @@ body {
   line-height: 1.6;
   color: #212529;
   text-align: left;
-  background-color: #f8fafc;
+  background-color: #ddf0e0;
+  height: 100%;
+}
+.naslov {
+  font-size:20px;
+}
+.naslov:hover {
+  text-decoration:none;
+}
+.datum {
+  font-size:13px;
+  display:block;
+}
+
+.brojKom{
+  font-size:13px;
+  display:block;
+  float:right;
+}
+
+.dugme {
+  float:right;
+}
+
+.dugme2 {
+  margin-top:30px;
+}
+
+.write {
+  font-size:15px;
+  margin-top:20px;
+}
+
+.articleBody {
+  width:100%;
+}
+
+.usernameInput, .commentInput {
+  margin-bottom: 20px;
+}
+
+.commentInput {
+  height:auto;
+  width:100%;
+  margin-bottom:0px;
+}
+
+
+
+.napisiKom {
+  cursor: pointer;
+}
+
+#pisanjeKomentara {
+  display:none;
+}
+
+
+.komentar {
+  font-size:14px;
+}
+
+.username {
+  color:rgb(0, 74, 80);
+}
+
+.headerNaslov {
+  font-size:25px;
+}
+
+.datumKom {
+  font-size:13px;
+  display:block;
+  float:right;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
   outline: 0 !important;
 }
+
 
 hr {
   box-sizing: content-box;
@@ -4981,6 +5056,7 @@ input[type=button].btn-block {
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem;
+  margin-top: 40px;
 }
 
 .card > hr {
@@ -10943,5 +11019,7 @@ a.text-dark:focus {
     border-color: #dee2e6;
   }
 }
+
+
 
 
